tests/toylang/neg/001070_mutation.toylang
program a = { if a then sleep 0; } .
